crates/pyprojx/tests/snapshots/check__missing_explicit_file_is_an_error.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
    - missing.toml
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: `missing.toml` does not exist
