crates/pyprojx/tests/snapshots/check__missing_pyproject_is_an_error.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: no `pyproject.toml` found in the current directory or any parent directory
