crates/pyprojx/tests/snapshots/check__reports_dependency_and_license_problems.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error[invalid-value]: invalid license expression `Apache 2.0`
 --> pyproject.toml:4:12
  |
4 | license = "Apache 2.0"
  |            ^^^^^^
  |
  = help: did you mean `Apache-2.0`?

error[invalid-value]: invalid requirement: Operator >= cannot be used with a wildcard version specifier
 --> pyproject.toml:5:27
  |
5 | dependencies = ["requests >= 2.3.*"]
  |                           ^^^^^^^^

warning[unsupported-feature]: setuptools does not support `License ::` classifiers alongside a license expression, as of 84.0.0
 --> pyproject.toml:6:16
  |
4 | license = "Apache 2.0"
  |           ------------ license expression set here
5 | dependencies = ["requests >= 2.3.*"]
6 | classifiers = ["License :: OSI Approved :: Apache Software License"]
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: remove the `License ::` classifiers, which are deprecated; the license expression replaces them (without `[build-system]`, tools build with setuptools)

Found 2 errors and 1 warning.

----- stderr -----
